--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,11 @@
         </div>
       </div>
 
-      <div class="clickContainer"></div>
+      <div class="manageClickContainer">
+        <button type="button" id="deleteAllClick"><img src="./img/bucket.png" alt="trash bucket"><p>Delete all click</p></button>
+
+        <div class="clickContainer"></div>
+      </div>
     </div>
 
     <script src="./main.js"></script>
